--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -109,6 +109,7 @@
 }
 
 .sl-checkbox__label {
+  line-height: var(--size);
   margin-left: 0.5em;
   user-select: none;
 }
