--- a/src/components/radio/radio.scss
+++ b/src/components/radio/radio.scss
@@ -106,6 +106,7 @@
 }
 
 .sl-radio__label {
+  line-height: var(--size);
   margin-left: 0.5em;
   user-select: none;
 }
