--- a/src/components/switch/switch.scss
+++ b/src/components/switch/switch.scss
@@ -152,6 +152,7 @@
 }
 
 .sl-switch__label {
+  line-height: var(--height);
   margin-left: 0.5em;
   user-select: none;
 }
